packages/isar_generator/test/errors/class/private.dart
// must be public

import 'package:isar/isar.dart';

@collection
class _Model {
  Id? id;
}
